feat: enhance time formatting and adjust layout for better user experience

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 FFMPEG_WORKER_URL="http://37.60.234.106:8787"
 
-MONGODB_URI="mongodb+srv://jadenr4545_db_user:love@cluster0.r7eft5f.mongodb.net/?appName=Cluster0"
+MONGODB_URI="mongodb+srv://autocapsmain:love@cluster0.eobs2so.mongodb.net/?appName=Cluster0"
 MONGODB_DB_NAME="Cluster0"   # you hid it, but I know what you meant
 
 ORACLE_PAR_URL="https://objectstorage.ap-mumbai-1.oraclecloud.com/p/RvkmrPoyiM10Q2BYXK7zDZoFLjFfVL--691qpNuj0GLSwav5qt9Wgf-a9JjRGVrq/n/bmz1uncfrhgc/b/uploads/o/"
