--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
+# AutoCaptions integration settings (optional)
+ENABLE_PORTAL_EXPORT=true
+# Point to ContentScheduler (dev server usually runs on port 3000)
+PORTAL_EXPORT_URL=http://localhost:3000/api/portal/receive
+
+# MongoDB (for optional integration features / worker)
+
+MONGODB_DB=Cluster0
+
+# Oracle Object Storage base PAR URL (prefix that your client app appends paths to)
+
+
+# Shared secret used by workers and portal for simple auth (keep safe)
+WORKER_JWT_SECRET=ankith123
 
 MONGODB_URI="mongodb+srv://autocapsmain:love@cluster0.eobs2so.mongodb.net/?appName=Cluster0"
 MONGODB_DB_NAME="Cluster0"   # you hid it, but I know what you meant
@@ -13,3 +27,6 @@ ASSEMBLYAI_API_KEY="9bcd61043a0744a998f59682caf1a999"
 
 # Integration secret shared with ContentScheduler
 INTEGRATION_JWT_SECRET="cs-autocaps-dev-secret"
+FFMPEG_WORKER_URL="http://localhost:8787"
+
+PORTAL_SECRET=ankith123
