--- a/.env
+++ b/.env
@@ -30,3 +30,21 @@ INTEGRATION_JWT_SECRET="cs-autocaps-dev-secret"
 FFMPEG_WORKER_URL="http://localhost:8787"
 
 PORTAL_SECRET=ankith123
+
+# --- Portal configuration (optional) ---
+# You can configure up to three portal targets. The app will read PORTAL_EXPORT_URL_1..3
+# and display them in the Send-to-Portal chooser. If only a single legacy PORTAL_EXPORT_URL
+# is present it will be used as the default.
+# Examples (uncomment and set values):
+PORTAL_EXPORT_URL_1=https://portal-a.example.com/api/portal/receive
+PORTAL_EXPORT_NAME_1=Portal A
+PORTAL_EXPORT_URL_2=http://localhost:3000/api/portal/receive
+PORTAL_EXPORT_NAME_2=HAHAHA
+PORTAL_EXPORT_URL_3=https://portal-c.example.com/api/portal/receive
+PORTAL_EXPORT_NAME_3=Portal C
+
+# Backwards-compatible single portal name (optional)
+# PORTAL_EXPORT_NAME=My Portal
+
+# Toggle portal export on/off
+# ENABLE_PORTAL_EXPORT=true
