feat: update portal export configuration and improve render job handling

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 # AutoCaptions integration settings (optional)
 ENABLE_PORTAL_EXPORT=true
-# Point to ContentScheduler (dev server usually runs on port 3000)
-PORTAL_EXPORT_URL=http://localhost:3000/api/portal/receive
 
 # MongoDB (for optional integration features / worker)
 
@@ -27,24 +25,15 @@ ASSEMBLYAI_API_KEY="9bcd61043a0744a998f59682caf1a999"
 
 # Integration secret shared with ContentScheduler
 INTEGRATION_JWT_SECRET="cs-autocaps-dev-secret"
-FFMPEG_WORKER_URL="http://localhost:8787"
+FFMPEG_WORKER_URL="http://37.60.234.106:8787"
 
 PORTAL_SECRET=ankith123
 
-# --- Portal configuration (optional) ---
-# You can configure up to three portal targets. The app will read PORTAL_EXPORT_URL_1..3
-# and display them in the Send-to-Portal chooser. If only a single legacy PORTAL_EXPORT_URL
-# is present it will be used as the default.
-# Examples (uncomment and set values):
-PORTAL_EXPORT_URL_1=https://portal-a.example.com/api/portal/receive
-PORTAL_EXPORT_NAME_1=Portal A
-PORTAL_EXPORT_URL_2=http://localhost:3000/api/portal/receive
-PORTAL_EXPORT_NAME_2=HAHAHA
+
+PORTAL_EXPORT_URL_1=https://hoopradar.vercel.app/api/portal/receive
+PORTAL_EXPORT_NAME_1=hoopradar
+PORTAL_EXPORT_URL_2=http://popbuzzr.vercel.app/api/portal/receive
+PORTAL_EXPORT_NAME_2=popbuzzr
 PORTAL_EXPORT_URL_3=https://portal-c.example.com/api/portal/receive
 PORTAL_EXPORT_NAME_3=Portal C
 
-# Backwards-compatible single portal name (optional)
-# PORTAL_EXPORT_NAME=My Portal
-
-# Toggle portal export on/off
-# ENABLE_PORTAL_EXPORT=true
