feat: update portal configuration and enhance UI for portal selection

--- a/.env
+++ b/.env
@@ -35,5 +35,7 @@ PORTAL_EXPORT_NAME_1=hoopradar
 PORTAL_EXPORT_URL_2=http://popbuzzr.vercel.app/api/portal/receive
 PORTAL_EXPORT_NAME_2=popbuzzr
 PORTAL_EXPORT_URL_3=https://portal-c.example.com/api/portal/receive
-PORTAL_EXPORT_NAME_3=Portal C
+PORTAL_EXPORT_NAME_3=gridiron central
+PORTAL_EXPORT_URL_4=https://portal-d.example.com/api/portal/receive
+PORTAL_EXPORT_NAME_4=ssup chiefs
 
